tests/ui/parser/using_operator_empty_string.sol
// Solc test: test/libsolidity/syntaxTests/operators/userDefined/operator_parsing_operator_name_empty_string.sol.

using {f as ""} for uint256; //~ ERROR: expected
